agregado el html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Esta es una RIFA.</h1>
+    <p>Se tienen datos de "una venta abierta (baudi)" y "una venta cerrada (fraterno)".</p>
+    <p>Seguir los carteles de prompt y alert</p>
+    <h2>Briant Gauna</h2>
     <script src="main.js"></script>
 </body>
 </html>
