--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,6 +13,18 @@
     <p>Se tienen datos de "una venta abierta (baudi)" y "una venta cerrada (fraterno)".</p>
     <p>Seguir los carteles de prompt y alert</p>
     <h2>Briant Gauna</h2>
-    <script src="main.js"></script>
+
+
+    <div class="container">
+        <div class="row">
+            <div id="grillaDeNumeros">
+
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
