--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Venta de Bono Colaboración</title>
 </head>
 <body>
     <h1>Esta es una RIFA.</h1>
@@ -14,17 +14,60 @@
     <p>Seguir los carteles de prompt y alert</p>
     <h2>Briant Gauna</h2>
 
+    <div>
+        <h3>Ingrese su nombre:</h3>
+        <input type="text" name="nombre" id="nombre" placeholder="Ingrese su Nombre">
+        <button id="btnNombre">Listo!</button>
+    </div>
 
-    <div class="container">
-        <div class="row">
-            <div id="grillaDeNumeros">
+    <div>
+        <h3>Ingrese el nombre de la rifa:</h3>
+        <input type="text" name="rifa" id="rifa" placeholder="Ingrese el nombre de la rifa">
+        <button id="btnRifa">OK!</button>
+    </div>
 
+    <div id="referencias" class="container d-flex justify-content-around align-items-center flex-wrap">
+        
+        <div class="d-inline-flex align-items-center justify-content-center">
+            <div class="estiloDeNumero disponible d-flex align-items-center justify-content-center">
+                <p>Blanco</p>
             </div>
+            <p> : Disponible</p>
         </div>
+        <div class="d-inline-flex align-items-center justify-content-center">
+            <div class="estiloDeNumero reservado d-flex align-items-center justify-content-center">
+                <p>Amarillo</p>
+            </div>
+            <p> : Reservado</p>
+        </div>
+        <div class="d-inline-flex align-items-center justify-content-center">
+            <div class="estiloDeNumero pagado d-flex align-items-center justify-content-center">
+                <p>Celeste</p>
+            </div>
+            <p> : Pagado</p>
+        </div>
+
+    </div>
+
+    <div id="grillaDeNumeros" class="container d-flex justify-content-around align-items-center flex-wrap">
+        
+                        <div class="estiloDeNumero disponible">
+                            1
+                        </div>
+                        <div class="estiloDeNumero reservado">
+                            2
+                        </div>
+                        <div class="estiloDeNumero pagado">
+                            3
+                        </div>
+
     </div>
 
 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+ 
     <script src="./main.js"></script>
+
 </body>
 </html>
