Bloquear la selección de los elementos ya vendidos y cambiar a color naranja los elementos seleccionados

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
     <h1>Esta es una RIFA.</h1>
-    <p>Se tienen datos de "una venta abierta (baudi)" y "una venta cerrada (fraterno)".</p>
-    <p>Seguir los carteles de prompt y alert</p>
-    <h2>Briant Gauna</h2>
+    <h2>¡A ganar!</h2>
+    <p>Sé que tienen nombres pedorros, baudi y tercer, pero ya lo mejoraré :) <br><br><br></p>
 
     <div>
         <h3>Ingrese su nombre:</h3>
         <input type="text" name="nombre" id="nombre" placeholder="Ingrese su Nombre">
         <button id="btnNombre">Listo!</button>
+        <h3 id="nombreGuardado"></h3>
     </div>
 
     <div>
-        <h3>Ingrese el nombre de la rifa:</h3>
-        <input type="text" name="rifa" id="rifa" placeholder="Ingrese el nombre de la rifa">
-        <button id="btnRifa">OK!</button>
+        <h3>Seleccione el nombre de la rifa:</h3>
+        <select name="rifas" id="rifas"></select>
+        <button id="btnRifa">Cargar Números</button>
     </div>
 
     <div id="referencias" class="container d-flex justify-content-around align-items-center flex-wrap">
