Falta agregar las cositas lindas ahora, está fullero todavía, pero ANDA :)

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>Venta de Bono Colaboración</title>
 </head>
 <body>
-    <h1>Esta es una RIFA.</h1>
-    <h2>¡A ganar!</h2>
-    <p>Sé que tienen nombres pedorros, baudi y tercer, pero ya lo mejoraré :) <br><br><br></p>
+    <h1 class="container">Esta es una RIFA.</h1>
+    <h2 class="container">¡A ganar!</h2>
+    <p class="container">Sé que tienen nombres pedorros, baudi y tercer, pero ya lo mejoraré :) <br><br><br></p>
 
-    <div>
+    <div class="container">
         <h3>Ingrese su nombre:</h3>
         <input type="text" name="nombre" id="nombre" placeholder="Ingrese su Nombre">
         <button id="btnNombre">Listo!</button>
         <h3 id="nombreGuardado"></h3>
     </div>
 
-    <div>
+    <div class="container">
         <h3>Seleccione el nombre de la rifa:</h3>
         <select name="rifas" id="rifas"></select>
         <button id="btnRifa">Cargar Números</button>
@@ -63,6 +63,9 @@
 
     </div>
 
+    <div id="aComprar">
+
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
