--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Venta de Bono Colaboración</title>
 </head>
 <body>
+    <header>
+        <div>
+            
+        </div>
+        <div>
+
+        </div>
+    </header>
     <h1 class="container">Esta es una RIFA.</h1>
     <h2 class="container">¡A ganar!</h2>
     <p class="container">Sé que tienen nombres pedorros, baudi y tercer, pero ya lo mejoraré :) <br><br><br></p>
